featured authros - bem

--- a/index.html
+++ b/index.html
@@ -836,67 +836,75 @@
         </div>
 
         <!-- Aside -->
-        <div id="explore-aside" class="col gap--m">
+        <div class="explore__aside col gap--m">
           <!-- Fatured Authors -->
-          <div id="featured-authors" class="aside__box col gap--m">
+          <div id="featured-authors" class="aside__box col gap--m container--s">
             <div class="section__title-wrapper">
-              <p>featured authors</p>
+              <p class="section__title">featured authors</p>
             </div>
-            <ul class="featured-authors-list col gap--m">
-              <li class="featured-authors-item row gap--m">
-                <h3>
+            <ul class="section__content featured-authors__list col gap--m">
+              <li class="featured-authors__item row gap--m">
+                <p class="featured-authors__icon ts--h3">
                   <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="ts--body-s">Urban</li>
-                    <li class="ts--body-s">&nbsp;·&nbsp;</li>
-                    <li class="ts--body-s">Cultural</li>
+                </p>
+                <div class="featured-authors__txt col">
+                  <p class="featured-authors__name bold">Grace Bennett</p>
+                  <ul class="fatured-authors__row row">
+                    <li class="featured-authors__topic ts--body-s">Urban</li>
+                    <li class="featured-authors__separator ts--body-s">
+                      &nbsp;·&nbsp;
+                    </li>
+                    <li class="featured-authors__topic ts--body-s">Cultural</li>
                   </ul>
                 </div>
               </li>
-              <li class="featured-authors-item row gap--m">
-                <h3>
+              <li class="featured-authors__item row gap--m">
+                <p class="featured-authors__icon ts--h3">
                   <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="ts--body-s">Urban</li>
-                    <li class="ts--body-s">&nbsp;·&nbsp;</li>
-                    <li class="ts--body-s">Cultural</li>
+                </p>
+                <div class="featured-authors__txt col">
+                  <p class="featured-authors__name bold">Grace Bennett</p>
+                  <ul class="fatured-authors__row row">
+                    <li class="featured-authors__topic ts--body-s">Urban</li>
+                    <li class="featured-authors__separator ts--body-s">
+                      &nbsp;·&nbsp;
+                    </li>
+                    <li class="featured-authors__topic ts--body-s">Cultural</li>
                   </ul>
                 </div>
               </li>
-              <li class="featured-authors-item row gap--m">
-                <h3>
+              <li class="featured-authors__item row gap--m">
+                <p class="featured-authors__icon ts--h3">
                   <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="ts--body-s">Urban</li>
-                    <li class="ts--body-s">&nbsp;·&nbsp;</li>
-                    <li class="ts--body-s">Cultural</li>
+                </p>
+                <div class="featured-authors__txt col">
+                  <p class="featured-authors__name bold">Grace Bennett</p>
+                  <ul class="fatured-authors__row row">
+                    <li class="featured-authors__topic ts--body-s">Urban</li>
+                    <li class="featured-authors__separator ts--body-s">
+                      &nbsp;·&nbsp;
+                    </li>
+                    <li class="featured-authors__topic ts--body-s">Cultural</li>
                   </ul>
                 </div>
               </li>
-              <li class="featured-authors-item row gap--m">
-                <h3>
+              <li class="featured-authors__item row gap--m">
+                <p class="featured-authors__icon ts--h3">
                   <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="ts--body-s">Urban</li>
-                    <li class="ts--body-s">&nbsp;·&nbsp;</li>
-                    <li class="ts--body-s">Cultural</li>
+                </p>
+                <div class="featured-authors__txt col">
+                  <p class="featured-authors__name bold">Grace Bennett</p>
+                  <ul class="fatured-authors__row row">
+                    <li class="featured-authors__topic ts--body-s">Urban</li>
+                    <li class="featured-authors__separator ts--body-s">
+                      &nbsp;·&nbsp;
+                    </li>
+                    <li class="featured-authors__topic ts--body-s">Cultural</li>
                   </ul>
                 </div>
               </li>
             </ul>
-            <div class="featured-authors-viewAll component-viewAll row"></div>
+            <div class="component-viewAll row end"></div>
           </div>
 
           <!-- Ad -->
