--- a/index.html
+++ b/index.html
@@ -908,9 +908,9 @@
           </div>
 
           <!-- Ad -->
-          <div id="ad" class="aside__box col gap--m">
+          <div id="ad" class="aside__box col gap--m container--s">
             <div class="section__title-wrapper">
-              <p>ad</p>
+              <p class="section__title">ad</p>
             </div>
             <a href="#" class="section__img">
               <img src="./data/insights/thumbnail/test.jpg" />
