--- a/index.html
+++ b/index.html
@@ -922,69 +922,105 @@
       <!-- Section: Video -->
       <section id="video" class="col gap--m container--m">
         <div class="section__title-wrapper">
-          <p>Video</p>
+          <p class="section__title">Video</p>
         </div>
         <div class="section__content col gap--l">
           <div
-            id="video-highlight"
-            class="bg--img col"
+            class="video__bg bg--img col"
             style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
           >
-            <div id="video-highlight-text" class="col gap--m tc--white">
-              <div>
+            <div class="video__content col gap--m tc--white">
+              <div class="topic__wrapper">
                 <label class="topic topic--white ts--btn">topic</label>
               </div>
-              <h2 class="serif">
+              <h2 class="video__headline serif">
                 Headline level 1 text for cover title ideally up to three lines
               </h2>
-              <p>
+              <p class="video__summary">
                 Body small text summary text goes here up to three lines, body
                 small text summary text goes here up to three lines...
               </p>
-              <a href="#" class="row gap--s">
-                <h4>
-                  <i class="fa-regular fa-circle-play"></i>
-                </h4>
-                <h4 class="uppercase">play</h4>
+              <a href="#" class="video__play">
+                <div
+                  class="video__play-icon-wrapper video__play-outline ts--h4"
+                >
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </div>
               </a>
             </div>
           </div>
-          <ul id="video-list" class="row gap--m">
-            <li class="video-list-item row gap--s">
-              <div class="video-list-text col gap--s">
-                <div>
+          <ul class="video__list row gap--m">
+            <li class="video__item row gap--s">
+              <div class="video__txt-wrapper col gap--s">
+                <div class="topic__wrapper">
                   <label class="topic">topic</label>
                 </div>
-                <h4 class="serif">Headline level 4 text similar to body</h4>
+                <h4 class="video__txt serif">
+                  Headline level 4 text similar to body
+                </h4>
               </div>
-              <div class="video-list-embedded"></div>
+              <div
+                class="video__thumbnail bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              >
+                <div class="video__float-wrapper video__play-outline ts--h4">
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </div>
+              </div>
             </li>
-            <li class="video-list-item row gap--s">
-              <div class="video-list-text col gap--s">
-                <div>
+            <li class="video__item row gap--s">
+              <div class="video__txt-wrapper col gap--s">
+                <div class="topic__wrapper">
                   <label class="topic">topic</label>
                 </div>
-                <h4 class="serif">Headline level 4 text similar to body</h4>
+                <h4 class="video__txt serif">
+                  Headline level 4 text similar to body
+                </h4>
               </div>
-              <div class="video-list-embedded"></div>
+              <div
+                class="video__thumbnail bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              >
+                <div class="video__float-wrapper video__play-outline ts--h4">
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </div>
+              </div>
             </li>
-            <li class="video-list-item row gap--s">
-              <div class="video-list-text col gap--s">
-                <div>
+            <li class="video__item row gap--s">
+              <div class="video__txt-wrapper col gap--s">
+                <div class="topic__wrapper">
                   <label class="topic">topic</label>
                 </div>
-                <h4 class="serif">Headline level 4 text similar to body</h4>
+                <h4 class="video__txt serif">
+                  Headline level 4 text similar to body
+                </h4>
               </div>
-              <div class="video-list-embedded"></div>
+              <div
+                class="video__thumbnail bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              >
+                <div class="video__float-wrapper video__play-outline ts--h4">
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </div>
+              </div>
             </li>
-            <li class="video-list-item row gap--s">
-              <div class="video-list-text col gap--s">
-                <div>
+            <li class="video__item row gap--s">
+              <div class="video__txt-wrapper col gap--s">
+                <div class="topic__wrapper">
                   <label class="topic">topic</label>
                 </div>
-                <h4 class="serif">Headline level 4 text similar to body</h4>
+                <h4 class="video__txt serif">
+                  Headline level 4 text similar to body
+                </h4>
               </div>
-              <div class="video-list-embedded"></div>
+              <div
+                class="video__thumbnail bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              >
+                <div class="video__float-wrapper video__play-outline ts--h4">
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
