--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <!-- Section: Top Topics -->
       <section id="topTopics" class="col gap--m container--m">
         <div class="section__title-wrapper">
-          <p>Top Topics</p>
+          <p class="section__title">Top Topics</p>
         </div>
         <div class="section__content">
           <ul class="topTopics__list topics__list">
@@ -172,7 +172,7 @@
       <!-- Section: Monthly Awards -->
       <section id="awards" class="col gap--m container--m">
         <div class="section__title-wrapper">
-          <p>Monthly Awards</p>
+          <p class="section__title">Monthly Awards</p>
         </div>
         <div class="section__content">
           <ul class="awards__list">
@@ -491,7 +491,7 @@
         <!-- Newsletter -->
         <section id="newsletter" class="col gap--m container--s aside__box">
           <div class="section__title-wrapper">
-            <p>newsletter</p>
+            <p class="section__title">newsletter</p>
           </div>
           <div class="section__content col gap--m">
             <p class="newsletter__description">
