footer - insert newsletter comp

--- a/index.html
+++ b/index.html
@@ -1079,27 +1079,7 @@
           <div class="section__title-wrapper">
             <p class="section__title">newletter</p>
           </div>
-          <div class="component-newsletter">
-            <div id="newsletter-content" class="col gap--m">
-              <p>
-                Subscribe our newsletter to get the latest updates all about
-                architecture
-              </p>
-              <form class="col gap--m">
-                <input placeholder="Enter your full name" />
-                <input placeholder="Enter your email" />
-                <label for="newsletter-consent-footer">
-                  <input type="checkbox" id="newsletter-consent-footer" />
-                  By signing up, you agree to our terms and privacy policy
-                </label>
-                <input
-                  type="submit"
-                  class="btn-primary ts--btn"
-                  value="subscribe"
-                />
-              </form>
-            </div>
-          </div>
+          <div class="component-newsletter"></div>
         </div>
       </div>
 
